made slightly more responsive + fixed nav bar spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgb(30,30,41) ;/*rgb(40,44,52); */
+  background-color: rgb(30,30,41); /*rgb(40,44,52); */
   margin: 0px;
   color: white;
 }
@@ -16,10 +16,6 @@ h2{
   font-size: 30px;
 }
 
-
-
-
-
 /*ONE*/
 
 #one{
@@ -31,69 +27,60 @@ padding-bottom: 10%;  /*remove later*/
 }
 
 #start{
-margin-top: 10px;
+  margin-top: 10px;
 }
-
 
 nav{
-  float: right;
+  display: block;
+  /*background-color: red; /* for if you need to see where the nav bar is */
+  text-align: right;
+  padding: 20px;
 }
 
-nav ul{
- list-style-type: none;
- margin: 0px;
- padding: 0px;
- margin-bottom: 50px;
- background-color: white;
- width: 100%;
-
-
-}
-nav ul li{
-  float: left;
-  width: 24%;
-
-}
-nav ul li a{
- font-size: 20px;
+nav a{
  text-decoration: none;
  color: white;
- text-align: center;
- padding: 18px 25px;
+ font-size: 20px;
+ margin: 0px;
+ padding: 10px;
 }
 
-nav ul li a:hover{
+nav a:hover{
  color:yellow;
 }
 
-h1{
+.title{
+  display: flex;
+  flex-direction: row;
+}
+
+/*CREATIVE COMPUTING CLUB*/
+.label{
+  flex: 1;
+}
+
+.label h1{
   margin-top: 20%;
+  margin-left: 20%;
   line-height: 100px;
   font-size: 60px;
-  float: left;
 }
 
-#label{
-  /*CREATIVE COMPUTING CLUB*/
-  margin-left: 15%;
-  width: 50%;
-
+.logo{
+  flex: 1;
 }
 
-#logo{
-  /*the image*/
-  margin-top: 7%;
-  float: right;
-  margin-right: 15%;
-  width:30%;
+/*the image*/
+.logo img{
+  width: 60%;
+  margin-top: 15%;
+  margin-left: 10%;
 }
 
 
 #computing{
   margin-left: 0px;
 }
-
-
 
 
 /*TWO*/
